# sistoreTauri

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src-tauri/src/models/: mod.rs  product.rs  report.rs  sale.rs
src-tauri/src/services/: mod.rs  product_service.rs  report_service.rs  sale_service.rs
src/api/: productService.ts  reportService.ts  saleService.ts
src/components/: Header.tsx  Modal.tsx  Sidebar.tsx  Topbar.tsx
src/layout/: DashboardLayout.tsx  MainLayout.tsx
src/lib/: i18n.ts
src/pages/: Dashboard.tsx  Inventory.tsx  Reports.tsx  Sales.tsx  Settings.tsx
